--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ defaults:
 paginate: 20
 
 #### Site
-title : Jekyll Jacman
-tagline: A fresh looking and responsive theme for Jekyll
+title : gskeno
+tagline: 路漫漫其修远兮，吾将上下而求索
 assets: /assets
 baseurl:
 
