--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ share_to: true #enable share-to buttons if true
 
 #### Author information
 author:
-  name: ivan1001      ## e.g. wuchong Author name
+  name: gskeno      ## e.g. wuchong Author name
   intro_line1:  "Hello ,I'm Larry Page in Google."    ## your introduction on the bottom of the page
   intro_line2:  "This is my blog,believe it or not."  ## the 2nd line
   weibo:      ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
@@ -110,8 +110,8 @@ author:
 
 #### Toc
 toc:
-  article: true   ## show contents in article.
-  aside: true     ## show contents in aside.
+  article: false   ## show contents in article.
+  aside: false     ## show contents in aside.
 ## you can set both of the value to true of neither of them.
 ## if you don't want display contents in a specified post,you can modify `front-matter` and add `toc: false`.
 
