--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ toc:
 
 #### Links
 links:
-  码农圈: https://coderq.com
+  程序那些事: http://www.flydean.com/
   Jark's Blog: http://wuchong.me
 
 #### Comment
