--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ share_to: true #enable share-to buttons if true
 #### Author information
 author:
   name: gskeno      ## e.g. wuchong Author name
-  intro_line1:  "Hello ,I'm gskeno in Google."    ## your introduction on the bottom of the page
+  intro_line1:  "Hello ,I'm gskeno in Alibaba."    ## your introduction on the bottom of the page
   intro_line2:  "Believe in yourself, always."  ## the 2nd line
   weibo:      ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier:  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
