--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,7 @@ toc:
 links:
   程序那些事: http://www.flydean.com/
   Jark's Blog: http://wuchong.me
+  pdai:https://pdai.tech/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
