--- a/_config.yml
+++ b/_config.yml
@@ -120,6 +120,7 @@ links:
   程序那些事: http://www.flydean.com/
   Jark's Blog: http://wuchong.me
   pdai: https://pdai.tech/
+  小林coding: https://xiaolincoding.com/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
