--- a/_config.yml
+++ b/_config.yml
@@ -121,6 +121,7 @@ links:
   Jark's Blog: http://wuchong.me
   pdai: https://pdai.tech/
   小林coding: https://xiaolincoding.com/
+  Yang's Blog: https://yang.observer/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
