--- a/_config.yml
+++ b/_config.yml
@@ -122,6 +122,8 @@ links:
   pdai: https://pdai.tech/
   小林coding: https://xiaolincoding.com/
   Yang's Blog: https://yang.observer/
+  小菜学编程: https://fasionchan.com/network/udp/transport-layer/
+  CN-notes: http://www.cyc2018.xyz/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
