--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,7 @@ links:
   Yang's Blog: https://yang.observer/
   小菜学编程: https://fasionchan.com/network/udp/transport-layer/
   CN-notes: http://www.cyc2018.xyz/
+  lucene博客: https://www.amazingkoala.com.cn/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
