--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,7 @@ links:
   小菜学编程: https://fasionchan.com/network/udp/transport-layer/
   CN-notes: http://www.cyc2018.xyz/
   lucene博客: https://www.amazingkoala.com.cn/
+  陶辉的技术分享: https://www.taohui.tech/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
